tests/rascal/negative/type_errors/L1/14_expression_ES10_D4_36.ob
MODULE Test14;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               p := p;
               z := 200;
               y := 1;
  (* error *)  x := (0 DIV 2);
               y := 0;
               y := ((((+ 1) * 0) + 0) * z);
               z := 200;
               y := ((((z + 0) - y) - x) + 1223);
               q := r;
               r := ((+ (1223 * (1 DIV 2))) <= ((200 + z) DIV 1223))
END Test14.